# jocko-pa

./: .env.example  .gitignore  README.md  justfile  main.py  manifest.yaml  pyproject.toml  requirements.txt
src/: agent.py  config.py  llm.py  slack.py
