[project]
name = "slack-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.13",
    "httpx>=0.28.1",
    "langchain>=0.3.20",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.10",
    "mcp>=1.4.0",
    "posthog>=3.20.0",
    "ruff>=0.10.0",
    "slack-bolt>=1.22.0",
    "slack-sdk>=3.34.0",
    "uvicorn>=0.34.0",
]
